# llm_fun

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  astew.ipynb  bar.py  codecraft.py  config.py  language_map.py  mkcmd.py  pyproject.toml  requirements.txt
notebook/: getting_started.ipynb  test.ipynb
prompt/: chat_template.py  output_parser.py  template.py
txt2cmd/: Txt2Cmd.py  filer.py
txt2cmd/prompt/: chat_template.py  template.py
txt2cmd/templates/chat/: human_create.txt  human_update.txt  system.txt
