[tool.poetry]
name = "llm-fun"
version = "0.1.0"
description = ""
authors = ["astew"]
readme = "README.md"
packages = [{include = "txt2cmd"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.230"
typer = "^0.9.0"
openai = "^0.27.8"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
pyupgrade = "^3.9.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
